--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,10 +24,11 @@
             android:name=".MainActivity"
             android:label="My beacon"
             android:theme="@style/AppTheme.NoActionBar">
-            <!--<intent-filter>-->
-            <!--<action android:name="android.intent.action.MAIN" />-->
-            <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".SearchDevice"
@@ -75,10 +76,14 @@
             android:theme="@style/AppTheme.NoActionBar"
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="@string/fb_login_protocol_scheme" />
+
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -91,12 +96,23 @@
         </activity>
         <activity android:name=".rowdata" />
         <activity android:name=".AutoResizeTextView" />
-        <activity android:name=".item_plus_content_rowdata"></activity>
-        <activity android:name=".NewGroup"></activity>
-        <activity android:name=".NewEvent"></activity>
-        <activity android:name=".ChangePic"></activity>
-        <activity android:name=".AlertDistance"></activity>
-        <activity android:name=".editBeacon"></activity>
+        <activity android:name=".item_plus_content_rowdata" />
+        <activity
+            android:name=".NewGroup"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".NewEvent"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ChangePic" />
+        <activity android:name=".AlertDistance" />
+        <activity android:name=".editBeacon" />
+        <activity
+            android:name=".ChangeGroupPic"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".GroupMain"
+            android:label="@string/title_activity_group_main"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
