增加back鍵,group的beacon頁面顯示擁有者大頭貼

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,7 +93,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ChangePic" />
         <activity android:name=".AlertDistance" />
-        <activity android:name=".editBeacon" />
+        <activity android:name=".editBeacon"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".ChangeGroupPic"
             android:theme="@style/AppTheme.NoActionBar" />
