--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:largeHeap="true"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme"> <!-- Theme.AppCompat.NoActionBar, AppTheme -->
         <activity
             android:name=".MainActivity"
@@ -46,7 +46,8 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key"/>
+            android:value="@string/google_maps_key" />
+
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
@@ -148,10 +149,12 @@
         <activity
             android:name=".LocationHistory"
             android:label="歷史位置"
-            android:theme="@style/AppTheme.NoActionBar"
-            >
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".EventSetting"
+            android:label="活動設定"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".addBeaconToEvent"></activity>
     </application>
 
 </manifest>
